# wrenflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Info.plist  Makefile  Package.resolved  Package.swift  README.md  justfile  mise.toml  pubspec.yaml  release-please-config.json
.beads/: metadata.json
.githooks/: pre-commit
.github/workflows/: build.yml  lint-workflows.yml  pr-title.yml  release-please.yml  release.yml
CLI/: WrenflowCLI.swift
FFIModule/: wrenflow_ffiFFI.h
Resources/: AppIcon.icns
Sources/: App.swift  AppContextService.swift  AppDelegate.swift  AppState.swift  AudioRecorder.swift  CLIInstaller.swift  GroqModelsService.swift  KeychainStorage.swift  LocalTranscriptionService.swift  MenuBarView.swift  ModelDownloadView.swift  PipelineDebugContentView.swift  PipelineDebugPanelView.swift  PipelineHistoryItem.swift  PipelineHistoryStore.swift  PostProcessingService.swift  RecordingOverlay.swift  RustPipelineBridge.swift  SettingsView.swift  SetupAccordionView.swift  SetupView.swift  TranscriptionService.swift  UpdateManager.swift  WrenflowStyle.swift
android/app/: build.gradle.kts
core/: Cargo.toml
core/wrenflow-core/: Cargo.toml
core/wrenflow-core/src/: audio_capture.rs  config.rs  config_store.rs  history_store.rs  lib.rs  model_downloader.rs  models_infra.rs  post_processing_infra.rs  transcription_cloud.rs  transcription_local.rs
core/wrenflow-domain/: Cargo.toml
core/wrenflow-domain/src/: config.rs  history.rs  lib.rs  metrics.rs  model_management.rs  models.rs  pipeline.rs  platform.rs  post_processing.rs
core/wrenflow-domain/src/audio/: level.rs  mod.rs  recording.rs  resampler.rs  ring_buffer.rs  wav.rs
core/wrenflow-domain/src/transcription/: local.rs  mod.rs
core/wrenflow-ffi/: Cargo.toml
core/wrenflow-ffi/src/: lib.rs
core/wrenflow-ui/assets/: tailwind.css
core/wrenflow-ui/src/: main.rs  setup.rs
core/wrenflow-viewmodel/: Cargo.toml
core/wrenflow-viewmodel/src/: lib.rs  settings.rs  wizard.rs
docs/: tcc-debugging.md
flutter/: README.md  pubspec.yaml
flutter/lib/: main.dart
flutter/lib/providers/: app_lifecycle_provider.dart  audio_level_provider.dart  history_provider.dart  overlay_controller.dart  permissions_provider.dart  pipeline_state_provider.dart  settings_provider.dart  update_provider.dart
flutter/lib/screens/: settings_screen.dart  setup_wizard_screen.dart
flutter/lib/services/: launch_at_login_service.dart  overlay_service.dart  update_service.dart
flutter/lib/state/: app_lifecycle_state.dart
flutter/lib/theme/: wrenflow_theme.dart
flutter/lib/widgets/: model_download_widget.dart  recording_overlay.dart  system_tray.dart  waveform_painter.dart  window_synchronizer.dart
flutter/linux/flutter/: generated_plugins.cmake
flutter/macos/: project.yml
flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/macos/Runner/: AppDelegate.swift  Info.plist  MainFlutterWindow.swift  OverlayHandler.swift  PermissionHandler.swift
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/native/hub/: Cargo.toml
flutter/native/hub/src/actors/: audio_actor.rs  hotkey_actor.rs  mod.rs  model_actor.rs  pipeline_actor.rs
flutter/native/hub/src/signals/: mod.rs
flutter/test/: widget_test.dart
flutter/windows/: CMakeLists.txt
flutter/windows/flutter/: generated_plugins.cmake
flutter/windows/runner/: Runner.rc  main.cpp
ios/Wrenflow/: Info.plist
lib/: main.dart
lib/providers/: model_state_provider.dart  overlay_controller.dart  permissions_provider.dart  settings_provider.dart  update_provider.dart
lib/screens/: history_screen.dart  settings_screen.dart  setup_wizard_screen.dart
lib/services/: overlay_service.dart  permission_service.dart  update_service.dart
lib/theme/: wrenflow_theme.dart
lib/widgets/: green_toggle.dart  hotkey_capture.dart  initializing_dots.dart  model_download_widget.dart  recording_overlay.dart  settings_card.dart  waveform_painter.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/: project.yml
macos/Runner/: AppDelegate.swift  LaunchAtLoginHandler.swift  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Base.lproj/: MainMenu.xib
native/hub/: Cargo.toml
native/hub/src/: lib.rs  logging.rs
native/hub/src/actors/: audio_actor.rs  history_actor.rs  hotkey_actor.rs  mod.rs  model_actor.rs  paste_actor.rs  pipeline_actor.rs
native/hub/src/signals/: mod.rs
scripts/: download-ort.sh  generate-flutter-icons.sh
windows/: Cargo.toml
