[workspace]
members = [
    "wrenflow-core",
    "wrenflow-ffi",
    "wrenflow-viewmodel",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
uniffi = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
log = "0.4"
parakeet-rs = "0.3"
