[package]
name = "wrenflow-windows"
version = "0.2.0" # x-release-please-version
edition = "2021"
description = "Wrenflow Windows system tray app — hold a key to record, release to transcribe"
license = "MIT"

[[bin]]
name = "wrenflow"
path = "src/main.rs"

# ---------------------------------------------------------------------------
# Unconditional dependencies — available on all platforms for `cargo check`
# ---------------------------------------------------------------------------

[dependencies]
# Wrenflow shared core (transcription pipeline, config, history, WAV encoding)
wrenflow-core = { path = "../core/wrenflow-core" }

# Async runtime (mirrors wrenflow-core's tokio dependency)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Config / serialization (shares wrenflow-core's serde)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASAPI audio capture via CPAL.
# WASAPI is the default Windows audio backend; no extra feature flag required.
# On non-Windows hosts CPAL still compiles with its host-native backend, which
# is fine because all CPAL usage is guarded by #[cfg(target_os = "windows")].
cpal = "0.15"

# Global hotkey management (thin cross-platform wrapper over RegisterHotKey /
# NSEvent / XGrabKey).  Only the Windows backend is actually used at runtime.
global-hotkey = "0.6"

# ---------------------------------------------------------------------------
# Windows-only native bindings — only resolved when targeting Windows
# ---------------------------------------------------------------------------

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    # Core Win32
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    # Hotkey registration + keyboard input
    "Win32_UI_Input_KeyboardAndMouse",
    # Clipboard
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    # COM (needed for UI Automation CoCreateInstance)
    "Win32_System_Com",
    # UI Automation
    "Win32_UI_Accessibility",
] }

# ---------------------------------------------------------------------------
# Build script dependencies
# ---------------------------------------------------------------------------

[build-dependencies]
# Embeds the app icon and marks the binary as a Windows GUI app (no console
# window) when building for Windows.  Safe to list unconditionally — the
# build script is only executed when cargo actually builds the crate.
winresource = "0.1"
