[package]
name = "wrenflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wrenflow-domain = { path = "../wrenflow-domain" }
uniffi.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
log.workspace = true
parakeet-rs.workspace = true
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
