[package]
name = "wrenflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wrenflow-domain = { path = "../wrenflow-domain" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
log.workspace = true
parakeet-rs = { workspace = true, features = ["load-dynamic"] }
tokio-stream = "0.1"
cpal.workspace = true
opus-rs = "0.1"
ogg = "0.9"

[dev-dependencies]
tempfile = "3"
