[package]
name = "wrenflow-domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
