[package]
name = "wrenflow-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]
name = "wrenflow_ffi"

[dependencies]
wrenflow-core = { path = "../wrenflow-core" }
wrenflow-domain = { path = "../wrenflow-domain" }
uniffi.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
log.workspace = true
thiserror.workspace = true
