[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.10.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
env_logger = "0.11"
log = "0.4"
async-trait = "0.1.87"
messages = "0.3.1"
wrenflow-domain = { path = "../../../core/wrenflow-domain" }
wrenflow-core = { path = "../../../core/wrenflow-core", default-features = false }
rdev = "0.5"
enigo = "0.6"
arboard = "3"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
